[project]
name = "aviation"
version = "0.1.0"
description = "A simple model of global aviation."
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[dependency-groups]
dev = [
    "ruff>=0.12.3",
]
docs = [
    "mkdocs-bibtex>=4.4.0",
    "mkdocs-material>=9.6.15",
]

[tool.ruff.lint]
select = [
    "B",
    "E",
    "F",
    "I",
    "N",
    "SIM",
    "T",
    "UP",
]

[tool.ruff.lint.per-file-ignores]
"analysis/passengers_per_day.py" = ["T201"]
"analysis/required_global_fleet.py" = ["T201"]

[tool.uv]
default-groups = ["dev", "docs"]

[build-system]
requires = ["uv_build>=0.7.21,<0.8.0"]
build-backend = "uv_build"
